# opengl_sandbox

./: CMakeLists.txt  README.md  imgui.ini
assets/shaders/basic_texture/: fragment.glsl
assets/shaders/batch_rendered_textures/: fragment.glsl  vertex.glsl
resources/shaders/: basic_fragment_shader.glsl
resources/shaders/basic_color/: basic_vertex_shader.glsl
resources/shaders/basic_texture/: basic_texture_vertex_shader.glsl
src/: main.cpp  vertex.h
src/batch_renderer/: batch_renderer.cpp  batch_renderer.h
src/gl_check_error/: gl_check_error.cpp  gl_check_error.h
src/orthographic_camera/: orthographic_camera.cpp  orthographic_camera.h
src/shader/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
tests/test_batch_dynamic_geometry/: test_batch_dynamic_geometry.cpp  test_batch_dynamic_geometry.h
tests/test_batch_quad_texture/: test_batch_quad_texture.cpp  test_batch_quad_texture.h
tests/test_batch_rendered_quad_texture/: test_batch_rendered_quad_texture.cpp  test_batch_rendered_quad_texture.h
tests/test_multiple_triangles/: test_multiple_triangles.cpp  test_multiple_triangles.h
tests/test_orthographic_camera/: test_orthographic_camera.cpp  test_orthographic_camera.h
tests/test_sandbox/: test_sandbox.cpp  test_sandbox.h
tests/test_single_quad_texture/: test_single_quad_texture.cpp  test_single_quad_texture.h
tests/test_single_triangle/: test_single_triangle.cpp  test_single_triangle.h
tests/test_utility/: test.h  test_menu.cpp  test_menu.h
